fix(about): adjust css and spacing

--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -29,7 +29,7 @@
 }
 
 .experience-container > div > ul > li:first-child {
-  margin: 0 10px 0 0;
+  margin: 0 10px 10px 10px;
 }
 
 .experience-container > div > ul > li {
@@ -37,5 +37,5 @@
   text-align: left;
   padding-inline-start: 0px;
   display: inline-block;
-  margin: 0 10px;
+  margin: 0 10px 0 10px;
 }
